Update README and improve link extraction and processing mechanisms
- Removed unused styles from the flowchart in README.md
- Enhanced `extract_links_from_html_async` to track progress of link processing
- Added functionality to resume URL processing from a saved index in `agent.py`
- Updated default model in `fastagent.config.yaml`
- Created new file to store the last processed index for continuity

--- a/fastagent.config.yaml
+++ b/fastagent.config.yaml
@@ -10,7 +10,7 @@
 # If not specified, defaults to "haiku". 
 # Can be overriden with a command line switch --model=<model>, or within the Agent constructor.
 
-default_model: o3-mini
+default_model: gpt-4o-mini
 
 # Logging and Console Configuration:
 logger:
