Update default model in configuration to gpt-4.1-nano; enhance README with future improvement plans and user interaction flow.

--- a/fastagent.config.yaml
+++ b/fastagent.config.yaml
@@ -10,7 +10,7 @@
 # If not specified, defaults to "haiku". 
 # Can be overriden with a command line switch --model=<model>, or within the Agent constructor.
 
-default_model: gpt-4o-mini
+default_model: gpt-4.1-nano
 
 # Logging and Console Configuration:
 logger:
