clean: Remove unnecessary markdown files and references
- Remove MCP_VALIDATION_REPORT.md as all content is now in README
- Update README to remove references to external validation report
- Centralize all documentation in single README file
- Clean up redundant documentation files

📋 All validation results and test information now in main README

--- a/.gitignore
+++ b/.gitignore
@@ -140,6 +140,8 @@ dist
 
 # Python / FastAgent specific
 .venv/
+.uv/
+.python-version
 logs/
 fastagent.secrets.yaml
 __pycache__/
@@ -153,3 +155,17 @@ dist/
 
 # output files
 site_crawl_result.md
+crawl_targets_*.json
+last_processed_index_*.txt
+
+# Performance testing outputs
+tests/performance/results/
+tests/performance/reports/
+
+# Observability outputs
+metrics/
+traces/
+
+# Local LLM / Ollama models
+models/
+.ollama/
