--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,9 +22,13 @@ agentic-web-scraper = "mcp_server:main"
 [tool.uv]
 dev-dependencies = [
     "pytest>=7.0.0",
-    "pytest-asyncio>=0.21.0"
+    "pytest-asyncio>=0.21.0",
+    "aiohttp>=3.8.0"
 ]
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["adapters", "config", "core"]
