--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,34 @@ traces/
 # Local LLM / Ollama models
 models/
 .ollama/
+
+dev-debug.log
+# Environment variables
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+# OS specific
+.DS_Store
+
+# Task files
+# tasks.json
+# tasks/
+
+# AI Assistant rule directories
+.clinerules/
+.cursor/
+.roo/
+.trae/
+.windsurf/
+.roomodes
+
+# Taskmaster data and configuration
+.taskmaster/
+
+# Keep .github/ tracked (remove this line if you want to ignore it)
+# .github/
